<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:layout_marginTop="16dp"
        android:textSize="24sp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/ttl_spotify"
        android:layout_marginTop="32dp"
        android:onClick="btnSpotifyStreamer"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F08C35"
        android:text="@string/ttl_scores"
        android:onClick="btnScoresApp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F08C35"
        android:text="@string/ttl_library"
        android:onClick="btnLibraryApp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F08C35"
        android:text="@string/ttl_build_it"
        android:onClick="btnBuildItBigger"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F08C35"
        android:text="@string/ttl_xyz"
        android:onClick="btnXYZReader"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#ff0000"
        android:text="@string/ttl_capstone"
        android:textColor="#fff"
        android:onClick="btnCapstone"/>

</LinearLayout>
